--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-responsive": "^9.0.2"
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -29,7 +29,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5"
   }
 }
