--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
+    "sass": "^1.69.5",
     "tailwindcss": "^3.4.0",
     "typescript": "^5"
   }
