--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-responsive": "^9.0.2",
+    "recharts": "^2.10.3",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
