--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -18,6 +18,7 @@
     "@headlessui/react": "^1.7.17",
     "antd": "^5.12.3",
     "next": "14.0.4",
+    "rc-footer": "^0.6.8",
     "react": "^18",
     "react-dom": "^18",
     "react-responsive": "^9.0.2",
