adding a massive typography in the first component in the page ,redesigning competitions UI , adding drawer for mobile screens,fixing bugs ,Removing Herobrine

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "downlevelIteration": true,
     "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
+    "allowJs": true,    
     "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
