--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.17",
     "@types/react-dom": "^18.2.18",
+    "@vercel/analytics": "^1.1.1",
     "antd": "^5.12.3",
     "next": "14.0.4",
     "rc-footer": "^0.6.8",
